# drone_logger

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  speckit_analysis_report.md  tasks.md
.specify/: phase-2-part1-report.md
backend/: .coverage  .env  .env.example  README.md  app.py  check_gps.py  check_uploaded_gps.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/: __init__.py  app.py  config.py  exceptions.py  exceptions_handler.py
backend/src/api/v1/: __init__.py  collections.py  exports.py  flights.py  locations.py  photos.py  routes.py
backend/src/db/: __init__.py  init_db.py  session.py
backend/src/middleware/: error_handler.py
backend/src/models/: __init__.py  base.py  collection.py  gps_location.py  photo.py  photo_marker.py
backend/src/schemas/: base.py  collection.py  export.py  location.py  photo.py
backend/src/services/: __init__.py  base.py  collection_manager.py  export_service.py  flight_service.py  gps_extractor.py  location_service.py  photo_processor.py
backend/src/utils/: clustering.py  file_utils.py  filters.py  gps.py
backend/tests/: conftest.py
backend/tests/contract/: test_collections.py  test_exports.py  test_flights.py  test_locations.py  test_photos.py
backend/tests/integration/: test_import_workflow.py  test_map_display.py
backend/tests/unit/: test_db_session.py  test_exceptions.py  test_export_service.py  test_file_utils.py  test_filters.py  test_flight_service.py  test_gps_extractor.py  test_gps_utils.py  test_photo_processor.py
(+80 files in other folders)
